# mixing-cocoa-and-qt

./: AutoUpdater.cpp  AutoUpdater.h  CMakeLists.txt  SparkleAutoUpdater.h  SparkleAutoUpdater.mm  main.cpp  mixing-cocoa-and-qt.pro
